[metadata]
name = red_de_metro
description = Un programa que optimiza redes
author = Carlos Pizarro
readme = "README.md"
license = { file="LICENSE" }
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    networkx==2.8.6
    setuptools==65.2.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
include_package_data = True

[options.package_data]
* = *.tsv
red_de_metro = py.typed

[options.packages.find]
where = src

[flake8]
max-line-length = 160